Fixed scrollbar flash on course description

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -319,6 +319,7 @@ nav a:hover{
 	padding: 1rem;
 	box-shadow: #373737 0.1rem 0.1rem 0.1rem;
 	user-select: none;
+	font-size: large;
 }
 
 .course-title:hover {
@@ -347,9 +348,12 @@ nav a:hover{
 
 .course-box-open {
 	transition: max-height 0.5s;
+	transition: overflow-y;
+	transition-delay: overflow-y 0.5s;
+
 	max-height: 30rem;
 	border: black;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .course-description {
@@ -359,7 +363,7 @@ nav a:hover{
 }
 
 .course-description a {
-	color: rgb(220, 223, 252);
+	color: rgb(197, 197, 197);
 	text-decoration: underline;
 }
 
